# Snake-AI

./: .gitignore  README.md  package.json  pnpm-lock.yaml  test-suite.js
rust/: Cargo.toml  README.md
rust/crates/snake-ai/src/: bitboard.rs  brain.rs  config.rs  floodfill.rs  grid.rs  heuristics.rs  lib.rs  model.rs  pathfinding.rs  search.rs  tt.rs  voronoi.rs  zobrist.rs
rust/crates/snake-api/src/: lib.rs
rust/crates/snake-app/: Cargo.toml
rust/crates/snake-app/src/: main.rs  server.rs
rust/crates/snake-app/src/gui/: app.rs  panels.rs  playground.rs  server.rs  (+2 more)
rust/crates/snake-domain/src/: direction.rs  engine.rs  food.rs  rng.rs  types.rs
rust/crates/snake-io/src/: lib.rs  scenario.rs
rust/data/: arena_snapshot.json
rust/data/scenarios_v2/: scenario_1770420738568.json  scenario_1770422406199.json  scenario_1770422451060.json  scenario_1770422484002.json  scenario_1770668540944.json  scenario_1770670207096.json  scenario_1770681681409.json  scenario_1770681704101.json  scenario_1771562808370.json  scenario_1771610461223.json  scenario_1771632897001.json  scenario_1771632897002.json  scenario_1771725743528.json  scenario_1771734005785.json  scenario_1771736922377.json  scenario_1771739662220.json  scenario_1771767058845.json  test_case_10.json  test_case_11.json  test_case_12.json  test_case_14.json  test_case_15.json  test_case_16.json  test_case_17.json  test_case_18.json  test_case_19.json  test_case_2.json  test_case_20.json  test_case_21.json  test_case_22.json  test_case_23.json  test_case_24.json  test_case_25.json  test_case_26.json  test_case_27.json  test_case_28.json  test_case_29.json  test_case_3.json  test_case_30.json  test_case_31.json  (+12 more)
(+102 files in other folders)
