[workspace]
members = [
    "crates/snake-domain",
    "crates/snake-ai",
    "crates/snake-io",
    "crates/snake-api",
    "crates/snake-app",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[profile.release]
lto = "thin"
# codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
debug = 1
incremental = false

[profile.dev.package."*"]
debug = 0

[profile.test]
debug = 1
incremental = false

[profile.test.package."*"]
debug = 0
