[package]
name = "snake-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", default-features = false, features = ["http1", "json", "tokio", "tracing"] }
clap = { version = "4.5.60", features = ["derive"] }
eframe = { version = "0.33.3", default-features = false, features = ["accesskit", "default_fonts", "glow"] }
egui_plot = "0.34.1"
rand = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
snake-ai = { version = "0.1.0", path = "../snake-ai" }
snake-api = { version = "0.1.0", path = "../snake-api" }
snake-domain = { version = "0.1.0", path = "../snake-domain" }
snake-io = { version = "0.1.0", path = "../snake-io" }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "net", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["ansi", "env-filter", "fmt"] }
